--- a/Projet web pour ouvrir html/style.css
+++ b/Projet web pour ouvrir html/style.css
@@ -1,4 +1,4 @@
-body {
+ebody {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background-color: white;
@@ -210,4 +210,24 @@ button:hover {
 }
 .seat.selected {
   background-color: #6c9;
+}
+
+#footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 20px 10px;
+  margin-top: 40px;
+  font-size: 14px;
+  box-shadow: 0 -2px 5px rgba(0,0,0,0.3);
+}
+
+#footer a {
+  color: #00f2fe;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+#footer a:hover {
+  text-decoration: underline;
 }
