--- a/Projet web pour ouvrir html/style.css
+++ b/Projet web pour ouvrir html/style.css
@@ -14,6 +14,16 @@ ebody {
   justify-content: center;
 }
 
+#imagedep {
+  height: 50vh;
+  background-image: url('boarding.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #image-content {
   color: white;
   font-size: 3rem;
